--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,3 +1,22 @@
-*{
-    /* color: green; */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400&display=swap');
+* {
+    margin: 0; border: 0; padding: 0;
+    text-decoration: none; list-style: none; font-size: 16px; font-weight: normal;
+    color: inherit; 
+    font-family: 'Open Sans', sans-serif; letter-spacing: inherit;
+}
+
+html{
+    background-color:  white;
+}
+html, body, #__next{
+    width: 100%; height: fit-content;
+}
+
+#__next{
+    display: flex; flex-direction: column; align-items: center;
+}
+
+.center{
+    display: flex; align-items: center; justify-content: center;
 }
