--- a/auctions/templates/auctions/Common/Header.html
+++ b/auctions/templates/auctions/Common/Header.html
@@ -2,7 +2,7 @@
 
 <header class="center">
     <div class="header inner">
-        <h2 class="center"><a href="/">COMMERCE</a></h2>
+        <h2 class="center"><a href="/" class="center">COMMERCE</a></h2>
         <ul>
             {% if user.is_authenticated %}
                 <li><a href="/watchlist">Watch List</a></li>
