created woring product grid

--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -20,3 +20,7 @@ html, body, #__next{
 .center{
     display: flex; align-items: center; justify-content: center;
 }
+
+.context{
+    display: none;
+}
