--- a/auctions/static/auctions/ProductGrid.scss
+++ b/auctions/static/auctions/ProductGrid.scss
@@ -1,3 +1,58 @@
-div.productGrid{
+div.productGrid.outer{
     width: 100%;
+    display: flex; flex-direction: column;
+    & .filters{
+        & form{
+            display: flex; 
+            align-items: center;
+            padding: 10px 0;
+            & select{
+                margin-left: 10px;
+                padding: 5px;
+                border-radius: 3px;
+                cursor: pointer;
+            }
+        }
+    }
+    & .productGrid.inner{
+        width: 100%;
+        display: grid;
+        grid-auto-rows:auto;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-gap: 15px;
+        & .listing{
+            width: 100%;
+            display: flex; flex-direction: column; align-items: center;
+            cursor: pointer;
+            box-sizing: border-box;
+            padding: 5px;
+            &:hover{
+                background-color: #DDDDDD;
+                border-radius: 10px;
+            }
+            & .image.outer{
+                height: 400px;
+                width: 100%;
+                overflow: hidden;
+                background-color: #CCCCCC;
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
+                border-radius: 10px;
+                margin-bottom: 10px;
+            }
+            & .text{
+                width: 100%;
+                display: flex; flex-direction: column;
+                align-items: flex-start;
+                & h3{
+                    font-weight: 600;
+                    font-size: 1.2em;
+                }
+                & p.bidValue{
+                    font-size: normal;
+                }
+            }
+        }
+    }
 }
