--- a/auctions/templates/auctions/Common/ProductGrid.html
+++ b/auctions/templates/auctions/Common/ProductGrid.html
@@ -21,6 +21,7 @@
         const productGrid = document.querySelector('.productGrid.inner')
         const newFilter = filter.value
         let html = ''
+        // console.log(data)
         data.forEach(listing => {
             if(newFilter==='all'){
                 html += `
