basic account page

--- a/auctions/templates/auctions/Common/Header.html
+++ b/auctions/templates/auctions/Common/Header.html
@@ -7,7 +7,7 @@
             <li><a href="/new">Create Listing</a></li>
             {% if user.is_authenticated %}
                 <li><a href="/watchlist">Watch List</a></li>
-                <li><a href="/account">My Listings</a></li>
+                <li><a href="/account/{{user.id}}">My Listings</a></li>
                 <li><a href="/logout">Logout</a></li>
             {% else %}
                 <li><a href="/login">Login</a></li>
