added correct redirect

--- a/auctions/templates/auctions/Account/account.html
+++ b/auctions/templates/auctions/Account/account.html
@@ -30,7 +30,13 @@
                 body:JSON.stringify({
                     userID: '{{user.id}}'
                 })
-            });
+            })
+            .then(res => res.json())
+            .then(data => {
+                if(data.status==='success'){
+                    window.location.href = '/'
+                }
+            })
         }
     </script>
 {% endblock %}
