listing page functions

--- a/auctions/templates/auctions/Common/Header.html
+++ b/auctions/templates/auctions/Common/Header.html
@@ -2,7 +2,7 @@
 
 <header class="center">
     <div class="header inner">
-        <h2 class="center"><a href="/" class="center">COMMERCE</a></h2>
+        <h2 class="center"><a href="/" class="center">FBay</a></h2>
         <ul>
             <li><a href="/">All Listings</a></li>
             <li><a href="/new">Create Listing</a></li>
