--- a/auctions/static/auctions/listing.scss
+++ b/auctions/static/auctions/listing.scss
@@ -1,3 +1,76 @@
 section.listing{
     width: 100%;
+    & .listing.inner{
+        width: 90%;
+        display: flex;
+        flex-direction: column; align-items: flex-start;
+        & h2{
+            font-size: 2em;
+            font-weight: 500;
+            margin: 20px 0;
+        }
+        & .content{
+            width: 100%;
+            display: flex;
+            margin-top: 20px; 
+            & .image{
+                height: 500px;
+                width: 35%;
+                margin-right: 5%;
+                border-radius: 10px;
+                background-size: cover; background-position: center; background-repeat: no-repeat;
+            }
+            & .text{
+                display: flex;
+                flex-direction: column;
+                & .subsection{
+                    display: flex; flex-direction: column; 
+                    align-items: flex-start;
+                    margin-bottom: 20px;
+                    & h3{
+                        font-weight: 500;
+                        font-size: 1.3em;
+                        margin-bottom: 10px;
+                    }
+                    &.bidding{
+                        h3{
+                            font-size: 1em;
+                        }
+                        & p{
+                            & a{
+                                display: inline;
+                                text-decoration: underline;
+                                color: blue;
+                            }
+                        }
+                        & form{
+                            margin: 10px 0;
+                            display: flex;
+                            align-items: center;
+                            & input{
+                                width: 100px;
+                                padding: 10px;
+                                border: 2px solid black;
+                                border-radius: 5px;
+                                margin-right: 20px;
+                            }
+                            & button{
+                                padding: 10px;
+                                background-color: #DDDDDD;
+                                cursor: pointer;
+                                width: 80px;
+                                border-radius: 5px;
+                                &:hover{background-color: #CCCCCC;}
+                            }
+                        }
+                        & #bidMessage{
+                            &.off{display: none;}
+                            display: flex;
+                            color: red;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
