--- a/auctions/templates/auctions/Listing/listing.html
+++ b/auctions/templates/auctions/Listing/listing.html
@@ -56,6 +56,7 @@
         .then(res => res.json())
         .then(data => {
             if(data.status==='success'){
+                bidInput.value = ''
                 window.location.reload()
             }
         })
