--- a/auctions/static/auctions/ProductGrid.scss
+++ b/auctions/static/auctions/ProductGrid.scss
@@ -20,6 +20,7 @@ div.productGrid.outer{
         grid-auto-rows:auto;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-gap: 15px;
+        margin-bottom: 40px;;
         & .listing{
             width: 100%;
             display: flex; flex-direction: column; align-items: center;
