--- a/auctions/static/auctions/listing.scss
+++ b/auctions/static/auctions/listing.scss
@@ -93,6 +93,14 @@ section.listing{
                             }
                         }
                     }
+                    &.close{
+                        & button{
+                            padding: 15px 20px;
+                            border-radius: 5px;
+                            font-weight: 600;
+                            cursor: pointer;
+                        }
+                    }
                 }
             }
         }
